# argonauts

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: precommit.yml  release.yml
argonauts/: __init__.py  decorators.py  inputs.py
examples/: movie_theatre.py  new_stuff.py  pizzahut.py
scripts/: gh_release.py
