[tool.poetry]
name = "argonauts"
version = "0.1.2"
description = "Easily convert function to interactive command line applications"
authors = ["Chandra Irugalbandara"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
questionary = "^2.0.1"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
